--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
         #decodedData {
             width: 360px;
             height: 320px;
-            background-color: #fdcc2e;
-            font-size: 20px;
-            color: black;
-            font-family: Andale Mono; 
+            background-color: #00a591;
+            font-size: 15px;
+            color: white;
+            font-family: MonoPixel; 
             position: relative; 
             padding: 10px; 
+            line-height:25px;
         }
         
         .page-number {
@@ -16,18 +17,18 @@
             bottom: 10px; 
             right: 10px;  
             font-size: 16px;
-            color: black;
+            color: white;
         }
     </style>
     <ul style="list-style: none; padding: 0; margin: 0;">
-        <li>WEAPON OF FUTURE</li>
-        <li>HEAD IN THE SKY</li>
-        <li>RING OF FAITH</li>
-        <li>HANDS OF ROBBERY</li>
-        <li>SHOES OF VITALITY x2</li>
-        <li>CORN BELT OF USB</li>
-        <li>HAT TRICK FOR THE WIN</li>
-        <li>NECKLACE OF RED APPLES</li>
+        <li>The Scourge of Crime and Punishment</li>
+        <li>Hitchhiker's Towel + 42</li>
+        <li>The Green Helmet of Vulnerable Heels</li>
+        <li>Handmaid's Chastity Belt</li>
+        <li>Shipwrecked Castaway Sandals</li>
+        <li>Recovered Time Watch</li>
+        <li>The Tolling Bell Pendant</li>
+        <li>The Philosopher's Wager Ring</li>
     </ul>
     <div class="page-number">1/10</div>
 </div>
