--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
             height: 320px;
             background-color: #00a591;
             font-size: 15px;
-            color: white;
+            color: black;
             font-family: MonoPixel; 
             position: relative; 
             padding: 10px; 
